--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -15,15 +15,13 @@
     </data>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            style="@style/myMatchParent"
             android:paddingHorizontal="@dimen/_28sdp"
             tools:context=".ui.signin.resetpassword.ResetPasswordFragment">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvResetPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/myWrapContent"
                 android:layout_marginTop="@dimen/_18sdp"
                 android:text="@string/sign_reset_password"
                 android:alpha="0.9"
@@ -34,8 +32,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvPleaseEnterEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/myWrapContent"
                 android:layout_marginStart="@dimen/_4sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:alpha="0.8"
@@ -47,8 +44,6 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailLayout"
                 style="@style/myOutlinedEditTextLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_4sdp"
                 android:hint="@string/sign_email"
                 app:startIconDrawable="@drawable/icon_email"
@@ -58,22 +53,16 @@
 
                 <com.leebeebeom.closetnote.ui.view.CustomEditText
                     android:id="@+id/etEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="?myEditTextHeight"
+                    style="@style/myEditText"
                     android:inputType="textEmailAddress"
                     android:text="@={model.emailLive}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                style="@style/myOutlineButton"
-                app:strokeColor="@android:color/transparent"
-                android:layout_width="wrap_content"
-                android:layout_height="?myNormalButtonHeight"
+                style="@style/myNormalButton"
                 android:layout_marginTop="@dimen/_2sdp"
                 android:onClick="@{() -> TextUtils.isEmpty(model.emailLive.trim) ? resetPasswordFragment.setEmailEmptyError() : resetPasswordFragment.sendPasswordResetEmail()}"
                 android:text="@string/sign_next"
-                android:textColor="?colorPrimary"
-                app:backgroundTint="?myColorControl"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/emailLayout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
