--- a/app/src/main/res/layout/fragment_sent_reset_password_email.xml
+++ b/app/src/main/res/layout/fragment_sent_reset_password_email.xml
@@ -11,14 +11,12 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.signin.resetpassword.sendrestapsswordemail.SendResetPasswordEmailFragment">
+        style="@style/myMatchParent"
+        tools:context=".ui.signin.resetpassword.sendrestapsswordemail.SendResetPasswordEmailFragment">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvSendEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/myWrapContent"
                 android:alpha="0.9"
                 android:layout_marginTop="@dimen/_44sdp"
                 android:text="@string/sign_sent_reset_password_email"
@@ -28,15 +26,10 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/myOutlineButton"
-            android:layout_width="wrap_content"
-            android:layout_height="?myNormalButtonHeight"
+            style="@style/myNormalButton"
             android:onClick="@{() -> fragment.openMail()}"
             android:text="@string/sign_lets_check"
-            android:textColor="?colorPrimary"
-            app:backgroundTint="?myColorControl"
             app:layout_constraintEnd_toEndOf="@id/tvSendEmail"
-            app:layout_constraintTop_toBottomOf="@id/tvSendEmail"
-            app:strokeColor="@android:color/transparent" />
+            app:layout_constraintTop_toBottomOf="@id/tvSendEmail" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
