--- a/app/src/main/res/layout/fragment_setting_arrow_icon.xml
+++ b/app/src/main/res/layout/fragment_setting_arrow_icon.xml
@@ -2,8 +2,7 @@
 <com.leebeebeom.closetnote.ui.view.icon.ArrowIcon xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    style="@style/myWrapContent"
     android:layout_marginEnd="@dimen/_8sdp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
