--- a/app/src/main/res/layout/fragment_sign_in_edit_text.xml
+++ b/app/src/main/res/layout/fragment_sign_in_edit_text.xml
@@ -13,15 +13,11 @@
             type="androidx.lifecycle.MutableLiveData&lt;String&gt;" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchWrap">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailLayout"
             style="@style/myOutlinedEditTextLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:hint="@string/sign_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +26,7 @@
 
             <com.leebeebeom.closetnote.ui.view.CustomEditText
                 android:id="@+id/etEmail"
-                android:layout_width="match_parent"
-                android:layout_height="?myEditTextHeight"
+                style="@style/myEditText"
                 android:inputType="textEmailAddress"
                 android:text="@={emailLive}" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -39,8 +34,6 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordLayout"
             style="@style/myOutlinedEditTextLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:hint="@string/sign_password"
             app:endIconMode="password_toggle"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,8 +43,7 @@
 
             <com.leebeebeom.closetnote.ui.view.CustomEditText
                 android:id="@+id/etPassword"
-                android:layout_width="match_parent"
-                android:layout_height="?myEditTextHeight"
+                style="@style/myEditText"
                 android:inputType="textPassword"
                 android:text="@={passwordLive}" />
         </com.google.android.material.textfield.TextInputLayout>
