--- a/app/src/main/res/layout/fragment_setting_etc.xml
+++ b/app/src/main/res/layout/fragment_setting_etc.xml
@@ -6,36 +6,26 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchWrap">
 
         <com.google.android.material.textview.MaterialTextView
             style="@style/myFragmentSubTextView"
             android:id="@+id/tvEtc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/setting_etc"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.card.MaterialCardView
             style="@style/mySettingCardView"
-            android:layout_width="0dp"
-            android:layout_height="?mySettingCardViewHeight"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEtc">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchParent">
 
                 <com.google.android.material.textview.MaterialTextView
                     style="@style/mySettingTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/setting_contact"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
