--- a/app/src/main/res/layout/fragment_setting_global.xml
+++ b/app/src/main/res/layout/fragment_setting_global.xml
@@ -6,15 +6,11 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchWrap">
 
         <com.google.android.material.textview.MaterialTextView
             style="@style/myFragmentSubTextView"
             android:id="@+id/tvGlobal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/setting_global"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -22,20 +18,14 @@
         <com.google.android.material.card.MaterialCardView
             style="@style/mySettingCardView"
             android:id="@+id/cardViewTheme"
-            android:layout_width="0dp"
-            android:layout_height="?mySettingCardViewHeight"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvGlobal">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchParent">
 
                 <com.google.android.material.textview.MaterialTextView
                     style="@style/mySettingTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/setting_theme"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -48,21 +38,15 @@
         <com.google.android.material.card.MaterialCardView
             style="@style/mySettingCardView"
             android:id="@+id/cardViewNetwork"
-            android:layout_width="0dp"
-            android:layout_height="?mySettingCardViewHeight"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardViewTheme">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchParent">
 
                 <com.google.android.material.textview.MaterialTextView
                     style="@style/mySettingTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/setting_network"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
