--- a/app/src/main/res/layout/fragment_sign_in_or.xml
+++ b/app/src/main/res/layout/fragment_sign_in_or.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    style="@style/myMatchWrap"
     app:layout_constraintEnd_toEndOf="parent"
     android:alpha="0.5"
     app:layout_constraintStart_toStartOf="parent">
 
     <View
         android:id="@+id/orDivider1"
-        android:layout_width="0dp"
-        android:layout_height="1px"
+        style="@style/myHorizontalDivider"
         android:layout_marginEnd="@dimen/_8sdp"
-        android:background="?myColorControl"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tvOr"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,8 +17,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvOr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/myWrapContent"
         android:text="@string/sign_or"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,10 +27,8 @@
 
     <View
         android:id="@+id/orDivider2"
-        android:layout_width="0dp"
-        android:layout_height="1px"
         android:layout_marginStart="@dimen/_8sdp"
-        android:background="?myColorControl"
+        style="@style/myHorizontalDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tvOr"
