--- a/app/src/main/res/layout/fragment_size_detail.xml
+++ b/app/src/main/res/layout/fragment_size_detail.xml
@@ -12,14 +12,11 @@
             type="com.leebeebeom.closetnote.ui.main.size.SizeViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchParent">
 
         <include
             layout="@layout/fragment_size_top"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/my0dpWrapContent"
             android:visibility="@{model.sizeLive.parentIndex == 0 || model.sizeLive.parentIndex == 2 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +26,7 @@
 
         <include
             layout="@layout/fragment_size_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/my0dpWrapContent"
             android:visibility="@{model.sizeLive.parentIndex == 1 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +36,7 @@
 
         <include
             layout="@layout/fragment_size_etc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/my0dpWrapContent"
             android:visibility="@{model.sizeLive.parentIndex == 3 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
