--- a/app/src/main/res/layout/fragment_size_edit_text_no_suffix.xml
+++ b/app/src/main/res/layout/fragment_size_edit_text_no_suffix.xml
@@ -16,15 +16,13 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout"
         style="@style/myOutlinedEditTextLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        tools:layout_width="match_parent"
         tools:hint="Option"
         android:hint="@{hint}">
 
         <com.leebeebeom.closetnote.ui.view.CustomEditText
             android:id="@+id/et"
-            android:layout_width="match_parent"
-            android:layout_height="?myEditTextHeight"
+            style="@style/myEditText"
             android:imeOptions="actionNext"
             android:inputType="text"
             android:text="@={text}" />
