--- a/app/src/main/res/layout/item_tree_folder.xml
+++ b/app/src/main/res/layout/item_tree_folder.xml
@@ -12,49 +12,50 @@
             type="com.leebeebeom.closetnote.ui.dialog.tree.holder.TreeFolderHolder" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        marginStart="@{folderHolder.margin}"
-        android:layout_height="wrap_content">
+    <androidx.appcompat.widget.LinearLayoutCompat
+        style="@style/myMatchWrap"
+        android:orientation="vertical">
 
-        <include
-            android:id="@+id/prefix"
-            layout="@layout/item_tree_prefix"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/_4sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            style="@style/myMatchWrap"
+            marginStart="@{folderHolder.margin}">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv"
-            style="@style/myTreeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{folderHolder.tuple.name}"
-            android:textSize="@dimen/_10sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/prefix"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Short Sleeve" />
+            <include
+                android:id="@+id/prefix"
+                layout="@layout/item_tree_prefix"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/_4sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
 
-        <include
-            android:id="@+id/postfix"
-            layout="@layout/item_tree_postfix"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:contentSize="@{folderHolder.tuple.contentSize}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv"
+                style="@style/myTreeTextView"
+                android:text="@{folderHolder.tuple.name}"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/prefix"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Short Sleeve" />
+
+            <include
+                android:id="@+id/postfix"
+                style="@style/myWrapContent"
+                layout="@layout/item_tree_postfix"
+                app:contentSize="@{folderHolder.tuple.contentSize}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:treeHolder="@{(BaseTreeHolder) folderHolder}" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
+            style="@style/myHorizontalDivider"
             android:layout_width="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_height="1px"
             android:background="@android:color/transparent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
