--- a/app/src/main/res/layout/item_vh_include_size_content.xml
+++ b/app/src/main/res/layout/item_vh_include_size_content.xml
@@ -69,9 +69,7 @@
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/cb"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:background="@android:color/transparent"
+            style="@style/myCheckBox"
             android:button="@drawable/check_box_heart"
             android:checked="@={sizeVH.tuple.favorite}"
             android:enabled="@{adapter.actionModeState == ActionModeImpl.ACTION_MODE_ON ? false : true}"
