--- a/app/src/main/res/layout/layout_dialog_tree.xml
+++ b/app/src/main/res/layout/layout_dialog_tree.xml
@@ -13,78 +13,61 @@
             type="com.leebeebeom.closetnote.ui.dialog.tree.TreeViewDialog" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical">
+    <androidx.core.widget.NestedScrollView style="@style/myMatchParent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchWrap">
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
+                android:id="@+id/divider"
+                style="@style/myHorizontalDivider"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:background="?myColorControl" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvCategory"
+                style="@style/myWrapContent"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_4sdp"
-                android:layout_marginBottom="@dimen/_2sdp">
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.9"
-                    android:text='@{@string/all_caps_category + " : "}'
-                    android:textSize="@dimen/_12sdp"
-                    tools:text="CATEGORY : "
-                    app:fontFamily="@font/noto_bold" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.9"
-                    android:text="@{' ' + model.parentCategory}"
-                    android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/noto_bold"
-                    tools:text=" TOP" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                android:alpha="0.9"
+                android:text='@{@string/all_caps_category + " : " + model.parentCategory}'
+                android:textSize="@dimen/_12sdp"
+                app:fontFamily="@font/noto_bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/divider"
+                tools:text="CATEGORY : TOP" />
 
             <FrameLayout
+                style="@style/myWrapContent"
+                android:layout_marginTop="@dimen/_2sdp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/treeViewContainer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvCategory" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/layoutAddCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                style="@style/myWrapContent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/treeViewContainer"
                 android:onClick="@{() -> dialog.navigateAddCategory()}"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginEnd="@dimen/_16sdp">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/myWrapContent"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="@dimen/_4sdp"
                     android:text="@string/dialog_add_category"
                     android:textSize="@dimen/_10sdp" />
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <com.leebeebeom.closetnote.ui.view.icon.AddIcon
                     setAddIcon2='@{""}'
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:src="@drawable/icon_add"
-                    android:layout_gravity="end" />
+                    style="@style/myWrapContent"
+                    tools:src="@drawable/icon_add" />
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
