--- a/app/src/main/res/layout/layout_popup.xml
+++ b/app/src/main/res/layout/layout_popup.xml
@@ -13,65 +13,41 @@
             type="com.leebeebeom.closetnote.util.popupwindow.PopupWindowListener.ListPopupWindowListener" />
     </data>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <FrameLayout style="@style/myWrapContent">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/myWrapContent"
             android:layout_margin="@dimen/_4sdp"
             app:cardCornerRadius="@dimen/_4sdp"
             app:cardElevation="@dimen/_4sdp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                style="@style/myMatchParent"
                 android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvAddCategory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/myPopupTextView"
                     android:onClick="@{() -> mainListener.addCategoryClick()}"
-                    android:padding="@dimen/_8sdp"
-                    android:paddingStart="@dimen/_12sdp"
-                    android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/dialog_add_category"
-                    android:textSize="@dimen/_11sdp" />
+                    android:text="@string/dialog_add_category" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvCreateFolder"
+                    style="@style/myPopupTextView"
                     android:onClick="@{() -> listListener.createFolderClick()}"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_8sdp"
-                    android:paddingStart="@dimen/_12sdp"
-                    android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/dialog_create_folder"
-                    android:textSize="@dimen/_11sdp" />
+                    android:text="@string/dialog_create_folder" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvSortOrder"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/myPopupTextView"
                     android:onClick="@{() -> mainListener != null ? mainListener.sortClick() : listListener.sortClick()}"
-                    android:padding="@dimen/_8sdp"
-                    android:paddingStart="@dimen/_12sdp"
-                    android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/dialog_sort_order"
-                    android:textSize="@dimen/_11sdp" />
+                    android:text="@string/dialog_sort_order" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvRecycleBin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/myPopupTextView"
                     android:onClick="@{() -> mainListener != null ? mainListener.recycleBinClick() : listListener.recycleBinClick()}"
-                    android:padding="@dimen/_8sdp"
-                    android:paddingStart="@dimen/_12sdp"
-                    android:paddingEnd="@dimen/_28sdp"
-                    android:text="@string/menu_recycle_bin"
-                    android:textSize="@dimen/_11sdp" />
+                    android:text="@string/menu_recycle_bin" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
     </FrameLayout>
