--- a/app/src/main/res/drawable/corner_round_background_grey.xml
+++ b/app/src/main/res/drawable/corner_round_background_grey.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="?attr/rvBackground" />
-    <solid android:color="?attr/rvBackground" />
+    <stroke android:color="?attr/myBackgroundGrey" />
+    <solid android:color="?attr/myBackgroundGrey" />
     <corners
         android:topLeftRadius="@dimen/_28sdp"
         android:topRightRadius="@dimen/_28sdp" />
